# wasm-deploy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
minimal_template/: cargo-generate.toml
minimal_template/deployment/: README.md
minimal_template/deployment/src/: contract.rs  defaults.rs  main.rs
src/: chain_res.rs  cli.rs  commands.rs  contract.rs  cosmrs.rs  cosmwasm.rs  error.rs  file.rs  key.rs  ledger.rs  lib.rs  msg_execute_contract.rs  tendermint_rpc.rs  utils.rs  wasm_cli.rs  wasm_msg.rs
src/msg/: absolute_tx_position.rs  access_config.rs  code_info_response.rs  contract_code_history_entry.rs  contract_info.rs  mod.rs  msg_clear_admin.rs  msg_execute_contract.rs  msg_initiate_contract.rs  msg_migrate_contract.rs  msg_store_code.rs  msg_update_admin.rs  query_code_response.rs
template/deployment/: Cargo.toml  DELETE_ME_Cargo.toml  README.md
template/deployment/src/: contract.rs  defaults.rs  subcommand.rs
wasm-deploy/: Cargo.toml  README.md
wasm-deploy-derive/: Cargo.toml
wasm-deploy-derive/src/: contracts.rs  contracts_old.rs  lib.rs
wasm-deploy/examples/: test.rs
wasm-deploy/src/: cli.rs  client.rs  commands.rs  commands.rs.orig  contract.rs  cw20.rs  deployment.rs  enumerate.rs  error.rs  execute.rs  file.rs  lib.rs  query.rs  settings.rs  utils.rs  wasm_cli.rs  wasm_msg.rs
wasm-deploy/src/config/: chain.rs  config.rs  env.rs  mod.rs  user_settings.rs  workspace_settings.rs
wasm-deploy/tests/: derive.rs  test.rs
workspace_example/: .gitignore  Cargo.toml  cargo-generate.toml  deploy
workspace_example/contracts/cw20_base/src/: contract.rs
workspace_example/deployment/: Cargo.toml  README.md
workspace_example/deployment/src/: contract.rs  defaults.rs  main.rs  subcommand.rs
