[package]
name = "wasm-deploy"
version = "0.1.0"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
edition = "2021"
homepage = "https://nept.finance"

[features]
default = ["wasm_cli"]
ledger = []
wasm_cli = []

[dependencies]
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20 = "1"
clap = { version = "4.0.18", features = ["derive", "string"] }
schemars = "0.8"
serde_json = "1.0"
lazy_static = "1.4.0"
clap_complete = "4.0.3"
inquire = "0.5.2"
strum = "0.24.1"
strum_macros = "0.24.1"
thiserror = "1.0.37"
futures = "0.3"

tendermint-rpc = { version = "0.27.0", default-features = false, features = ["http-client"] }
cosmrs = { version = "0.9.0", features = ["dev", "cosmwasm"] }
tokio = { version = "1.21.2", default-features = false }
async-recursion = "1.0.0"
cosmos-sdk-proto = "0.14.0"
keyring = "1.2.0"
cosm-orc = "=2.7.0"
colored = "2.0.0"
colored_json = "3.0.1"
interactive-parse = "0.1.0"
ledger-cosmos-secp256k1 = "0.4.0"
ledger-utility = { version = "0.3.4", default-features = false, features = ["usb"] }

[dev-dependencies]
faux = "0.1.7"