[package]
name = "wasm-deploy"
version = "0.1.0"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
edition = "2021"
homepage = "https://nept.finance"

[features]
default = ["wasm_cli"]
wasm_cli = []

[dependencies]
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20 = "1"
clap = { version = "4.0.18", features = ["derive", "string"] }
clap_complete = "4.0.3"
schemars = "0.8"
serde_json = "1.0"
lazy_static = "1.4.0"
inquire = "0.5.2"
strum = "0.24.1"
thiserror = "1.0.37"
tokio = { version = "1.21.2", default-features = false }
async-recursion = "1.0.0"
keyring = "1.2.0"
colored = "2.0.0"
colored_json = "3.0.1"
interactive-parse = "0.1.0"
cosm-tome = { git = "https://github.com/ewoolsey/cosm-tome.git", features = ["os_keyring"] }
log = "0.4"

[dev-dependencies]