[package]
name = "wasm-deploy"
version = "0.2.0"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
edition = "2021"
homepage = "https://cryptech.dev"
description = "wasm-deploy is a fully featured deployment sweet for complex, multicontract cosmwasm projects"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "deployment", "cli"]
license = "MIT"
repository = "https://github.com/cryptechdev/wasm-deploy"
readme = "README.md"
exclude = ["workspace_example/*"]

[features]
wasm_cli = []

[dependencies]
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20 = "1"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
schemars = "0.8"
serde_json = "1.0"
lazy_static = "1.4.0"
inquire = "0.5.2"
strum = "0.24.1"
thiserror = "1.0.37"
tokio = { version = "1.24.1", default-features = false }
async-recursion = "1.0.0"
keyring = "1.2.0"
colored = "2.0.0"
colored_json = "3.0.1"
interactive-parse = "0.1.0"
cosm-tome = { version = "0.2", features = ["os_keyring"] }
# cosm-tome = { version = "0.1", features = ["os_keyring"], package = "cosm-tome-wasm-deploy-fork"}
log = "0.4"