[package]
name = "wasm-deploy"
version = "0.4.0"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
edition = "2021"
homepage = "https://cryptech.dev"
description = "wasm-deploy is a fully featured deployment suite for complex, multicontract cosmwasm projects"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "deployment", "cli"]
license = "MIT"
repository = "https://github.com/cryptechdev/wasm-deploy"
readme = "../README.md"

[features]
wasm_cli = []

[dependencies]
wasm-deploy-derive = { version = "0.4.0", path = "../wasm-deploy-derive" }
wasm-opt = { version = "0.112", optional = true }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20 = "1"
cw20-base = "1"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
schemars = "0.8"
serde_json = "1"
lazy_static = "1"
inquire = "0.6"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
anyhow = "1"
tokio = { version = "1.27", default-features = false }
futures = "0.3"
async-recursion = "1"
keyring = "2"
colored = "2"
colored_json = "3"
interactive-parse = "0.1"
cosm-tome = { version = "0.2", features = ["os_keyring"] }
log = "0.4"
erased-serde = "0.3"
flate2 = "1"
