[package]
name = "wasm-deploy"
version = "0.6.0"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
edition = "2021"
homepage = "https://cryptech.dev"
description = "wasm-deploy is a fully featured deployment suite for complex, multicontract cosmwasm projects"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "deployment", "cli"]
license = "MIT"
repository = "https://github.com/cryptechdev/wasm-deploy"
readme = "../README.md"

[features]
default = ["wasm-opt"]
injective = ["cosm-utils/injective"]
wasm_cli = []

[dependencies]
wasm-deploy-derive = { version = "0.6.0", path = "../wasm-deploy-derive" }
cosm-utils = { version = "0.1.1", git = "https://github.com/cryptechdev/cosm-utils.git", branch = "develop", features = [
    "keyring",
] }
tendermint-rpc = "0.32"
wasm-opt = { version = "=0.110.2", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
ibc-chain-registry = "0.26"
cw20 = "1"
cw20-base = "1"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
convert_case = "0.6"
schemars = "0.8"
lazy_static = "1"
inquire = "0.6"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1"
anyhow = "1"
tokio = { version = "1.27", default-features = false }
futures = "0.3"
async-recursion = "1"
keyring = "2"
colored = "2"
colored_json = "4"
interactive-parse = "0.1.5"
log = "0.4"
erased-serde = "0.3"
flate2 = "1"
shrinkwraprs = "0.3"
