[package]
# This is the name of the generated binary for wasm-deploy.
# Feel free to change it to suit your project.
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Here we link to the api of our contracts.
# In this example it's the cw20 contract.
# You will have to import the required dependencies for your contracts.
# Feel free to remove these if they are not needed.
cw20 = "1"
cw20-base = "1"

# These deps are required to generate the binary.
anyhow = "1"
serde = "1"
schemars = "0.8"
cosmwasm-std = "1"
env_logger = "0.10"
log = "0.4"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.4"
strum = "0.25"
wasm-deploy = { path = "../../wasm-deploy", features = ["wasm-opt"]}
tokio = "1"
interactive-parse = "0.1"